--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 		#tickets {display: flex; flex-direction: row; justify-content: space-around; flex-wrap: wrap;}
 		.ticket {display:flex; flex-direction: column; width: 45%; min-width: 285px; background: #FFF; border: 2px solid #FFF; color: #0076b5; padding-bottom: 25px; margin-top: 35px;}
 		.ticket p, .ticket h3 { display: block; margin: 10px auto 10px;}
-		.ticket h3 {height: 50px; text-align: center;}
+		.ticket h3 {height: 50px; text-align: center;font-size: 25px;}
 		.ticket div {width: 85%; margin: 5px auto 25px; min-height: 325px;}	
 		.ticketImg {display: block; text-align: center; color: #FFF; font: 700 28px/20px "Alegreya Sans"; text-decoration:none; padding:0px 0 25px; margin-bottom:20px;}
 		.reg .ticketImg {background: url('../img/reg-bg.jpg');}
@@ -658,13 +658,10 @@
 					<img src="/img/logos/woki.jpg" alt="Woki">
 					<img src="/img/logos/pilsen.jpg" alt="pilsen">
 					<img src="/img/logos/uh.jpg" alt="u hispanoamericana">
-
-<!--
 					<img src="/img/logos/crunchyroll.jpg" alt="crunchyroll">
--->					
 				</div>
 			</div>
-			<p>Derechos Reservados &copy; 2019 - Producciones Plus Ultra de Costa Rica S.A.</p>
+			<p>Derechos Reservados &copy; 2019 - Producciones Plus Ultra de Costa Rica S.A. - CRPBA 2019 151</p>
 		</div>
 	</div>
 </body>
