--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 	<link rel="icon" href="/favicon.png" type="image/png">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
 	<link href="https://fonts.googleapis.com/css?family=Alegreya+Sans:300,500,700" rel="stylesheet">
-	<link href="/css/lightbox.css" rel="stylesheet">
+	<link href="https://sorgalla.com/lity/dist/lity.css" rel="stylesheet">
 	<link href="/css/slick.css" rel="stylesheet">
-	<link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script src="js/lib/greensock/TweenMax.min.js"></script>
 	<script src="js/ScrollMagic.js"></script>
 	<script src="js/plugins/animation.gsap.min.js"></script>
 	<script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<script src="js/lightbox.js"></script>
+	<script src="https://sorgalla.com/lity/dist/lity.js"></script>
 	<script src="js/custom.js"></script>
+	
 	<style>
 		html {scroll-behavior: smooth;}
 		body {font: 300 18px 'Alegreya Sans'; color: #fff; background: #0078b5}
@@ -73,7 +74,7 @@
 		#pug3{float: left; background: url('../img/pugoffka-costa-rica.jpg') bottom right no-repeat; background-size:contain;  width: 49%; height: 870px;}
 		#pugGal{display: block; margin: 35px auto 25px; text-align: center;}
 		#plinks {text-align: center;}
-		#goku {width:160.33px; height:100.59px; position: relative; top:105px; left:100%; background:url('../img/goku.png') no-repeat; background-size: contain;}
+		#goku {width:160.33px; height:100.59px; position: relative; top:105px; left:100%; /*background:url('../img/goku.png') no-repeat; background-size: contain;*/}
 		#ship {width:194px; height:194px; position: relative; top:200px; left:calc(50% + 250px); background:url('../img/ship.png') no-repeat;}
 		#shipshadow {width:376px; height:128px; position: relative; top:595px; left:calc(50% + 140px); background:url('../img/shipshadow.png') no-repeat;}
 		#fogR {width:161.22px; height:126.50px; position: relative; top:270px; left:calc(50% + 575px); background:url('../img/fogR.png') no-repeat;}
@@ -108,7 +109,7 @@
 		.marco img {border: 6px solid #a4ddf3; filter: contrast(50%) brightness(50%);}
 		.turnOn .marco img {filter: contrast(100%) brightness(100%);}
 		.bulb {background: url('../img/bulb.png') 124px center no-repeat; height: 25px; width: 100%; position: relative; top: -388px;}
-		.light {background: url('../img/rect.svg') center no-repeat; opacity: 0.2; height: 250px; width: 100%; position: relative; top: -388px; margin-bottom: -230px;}
+		.light {background: url('../img/rect.svg') center no-repeat; opacity: 0.2; height: 250px; width: 100%; position: relative; top: -388px; margin-bottom: -230px; display: block;}
 		.light:hover {opacity: 1;}
 		.arte p {color: #0078B5; font-weight: 500; margin: 15px; text-align: center;}
 		.socialLink {position: relative; top:-65px; }
@@ -319,6 +320,7 @@
 						<span>
 							<a href="https://www.facebook.com/officialchumlee/" target="_blank" class="fab fa-facebook-square"></a>
 							<a href="https://www.instagram.com/chumlee702/" target="_blank" class="fab fa-instagram"></a>
+							<a href="https://www.youtube.com/watch?v=Yn8zW_zDl80" class="fab fa-video" data-lity="chumlee"></a>
 						</span>
 					</div>
 				</div>
@@ -344,15 +346,13 @@
 				<div id="fogL"></div>
 				<div id="dune"></div>
 				<div id="reyero" class="pop">
-					<img src="https://placeimg.com/214/291/people" alt="jjjs">
+					<img src="/img/laura-torres.jpg" alt="laura torres doblaje">
 					<div>
-						<h2>Gerardo Reyero</h2>
-						<p>Freezer uno de los villanos más poderosos de la serie Dragon Ball llega Costa Rica para conquistar el corazón de todos los asistentes a Con-X. Ven a disfrutar de un show espectacular a corgo de Gerardo Reyero, la voz oficial de Freezar y muchos otros personajes del cine y la Televisión como Ash Williams, Tuxedo Mask, Meta Knight, Capitanazo, Gardfield, Hellboy, Jarvan IV entre muchos más.</p>
+						<h2>Laura Torres</h2>
+						<p>Una de las mejores actrices del doblaje latino; conocida por ser la voz de Goku, Gohan y Goten siendo niños, además de cientos de personajes más como Tommy Pickles de Rugrats, Shippo de Inuyasha, Crayón Shin-chan y más reciente, la Reina Soyloque Quiera Ser de LEGO Movie. Además es la voz de Kennen (LOL), Zayra de Overwatch y una lista interminable de personajes que no puedes imaginar y te va a sorprender... </p>
 						<span>
-							<a href="#" class="fab fa-facebook-square"></a>
-							<a href="#" class="fab fa-instagram"></a>
-							<a href="#" class="fab fa-twitter"></a>
-							<a href="#" class="fab fa-youtube"></a>
+							<a href="https://www.facebook.com/lauratorresdub/" class="fab fa-facebook-square"></a>
+							<a href="https://doblaje.fandom.com/es/wiki/Laura_Torres" class="fas fa-info-circle"></a>
 						</span>
 					</div>
 				</div>				
@@ -388,7 +388,7 @@
 				<div id="trigger"></div>
 				<div id="alina"></div>
 				<div id="infomex" class="pop">
-					<img src="https://placeimg.com/214/291/people" alt="jjjs">
+					<img src="/img/alina.jpg" alt="Alina Nicte">
 					<div>
 						<h2>Alina Nicte</h2>
 						<p>Desde México nos visita una animadora y locutora que se ha ganado el corazón de los aficionados en Costa Rica, no solo por su voz y sus canciones, si no también por el carisma y su forma tan especial de animar los eventos donde participa. Alina será la voz oficial de la final nacional de World Cosplay Summit y estará compartiendo el escenario junto a nuevos animadores costarricenses que se presentan en Con-X.</p>
@@ -427,14 +427,14 @@
 						<p>Si te gusta el arte del cosplay y la fotografiía, esta es la oportunidad de conocer y aprender junto a una de las cosplayers y fotografas más espectaculares del mundo, en un taller especializado de Fotografía Cosplay que estaremos anunciando proximamente.</p>
 						<p>Además, los  sueños de algunos pocos se harán realidad y podrán difrutar de una sesión exclusiva, frente al lente y el talento de quien ha fotografiado a los cosplayers más famosos e influyentes en la actualidad.</p>
 						<div id="pugGal">
-								<a href="/img/foto/pugoffka-01.jpg" data-lightbox="Pugoffka"><img src="/img/th-pugoffka-01.jpg" alt="Pugoffka"></a>
-								<a href="/img/foto/pugoffka-02.jpg" data-lightbox="Pugoffka"><img src="/img/th-pugoffka-02.jpg" alt="Pugoffka"></a>
-								<a href="/img/foto/pugoffka-03.jpg" data-lightbox="Pugoffka"><img src="/img/th-pugoffka-03.jpg" alt="Pugoffka"></a>
-								<a href="/img/foto/pugoffka-04.jpg" data-lightbox="Pugoffka"><img src="/img/th-pugoffka-04.jpg" alt="Pugoffka"></a>
-								<a href="/img/foto/enji-night.jpg" data-lightbox="Pugoffka"><img src="/img/th-enji-night.jpg" alt="Enji Night"></a>
-								<a href="/img/foto/leon-chiro.jpg" data-lightbox="Pugoffka"><img src="/img/th-leon-chiro.jpg" alt="Leon Chiro"></a>
-								<a href="/img/foto/reika-arikawa.jpg" data-lightbox="Pugoffka"><img src="/img/th-reika-arikawa.jpg" alt="Reika Arikawa"></a>
-								<a href="/img/foto/stella-chu.jpg" data-lightbox="Pugoffka"><img src="/img/th-stella-chu.jpg" alt="Stella Chu"></a>
+								<a href="/img/foto/pugoffka-01.jpg" data-lity="Pugoffka"><img src="/img/th-pugoffka-01.jpg" alt="Pugoffka"></a>
+								<a href="/img/foto/pugoffka-02.jpg" data-lity="Pugoffka"><img src="/img/th-pugoffka-02.jpg" alt="Pugoffka"></a>
+								<a href="/img/foto/pugoffka-03.jpg" data-lity="Pugoffka"><img src="/img/th-pugoffka-03.jpg" alt="Pugoffka"></a>
+								<a href="/img/foto/pugoffka-04.jpg" data-lity="Pugoffka"><img src="/img/th-pugoffka-04.jpg" alt="Pugoffka"></a>
+								<a href="/img/foto/enji-night.jpg" data-lity="Pugoffka"><img src="/img/th-enji-night.jpg" alt="Enji Night"></a>
+								<a href="/img/foto/leon-chiro.jpg" data-lity="Pugoffka"><img src="/img/th-leon-chiro.jpg" alt="Leon Chiro"></a>
+								<a href="/img/foto/reika-arikawa.jpg" data-lity="Pugoffka"><img src="/img/th-reika-arikawa.jpg" alt="Reika Arikawa"></a>
+								<a href="/img/foto/stella-chu.jpg" data-lity="Pugoffka"><img src="/img/th-stella-chu.jpg" alt="Stella Chu"></a>
 						</div>
 						<div id="plinks">
 							<p>Sigue a Pugoffka en:</p> 
@@ -474,16 +474,16 @@
 				</div>
 				<br><br>
 				<div class="carousel">
-					<div><a href="/img/foto/south-africa.jpg" data-lightbox="cosplay"><img src="/img/th-south-africa.jpg" alt="South Africa"><span>Team Sudáfrica 2018</span></a></div>
-					<div><a href="/img/foto/costa-rica.jpg" data-lightbox="cosplay"><img src="/img/th-costa-rica.jpg" alt="Costa Rica"><span>Team Costa Rica 2018</span></a></div>
-					<div><a href="/img/foto/mexico.jpg" data-lightbox="cosplay"><img src="/img/th-mexico.jpg" alt="Mexico"></a><span>Team México 2018</span></div>
-					<div><a href="/img/foto/hong-kong.jpg" data-lightbox="cosplay"><img src="/img/th-hong-kong.jpg" alt="Hong Kong"><span>Team Hong Kong 2018</span></a></div>
-					<div><a href="/img/foto/australia.jpg" data-lightbox="cosplay"><img src="/img/th-australia.jpg" alt="Australia"><span>Team Australia 2018</span></a></div>
-					<div><a href="/img/foto/indonesia.jpg" data-lightbox="cosplay"><img src="/img/th-indonesia.jpg" alt="Indonesia"><span>Team Indonesia 2018</span></a></div>
-					<div><a href="/img/foto/russia.jpg" data-lightbox="cosplay"><img src="/img/th-russia.jpg" alt="Russia"><span>Team Russia 2018</span></a></div>
-					<div><a href="/img/foto/alemania.jpg" data-lightbox="cosplay"><img src="/img/th-alemania.jpg" alt="Alemania"><span>Team Alemania 2018</span></a></div>
-					<div><a href="/img/foto/dinamarca.jpg" data-lightbox="cosplay"><img src="/img/th-dinamarca.jpg" alt="Dinamarca"><span>Team Dinamarca 2018</span></a></div>
-					<div><a href="/img/foto/japon.jpg" data-lightbox="cosplay"><img src="/img/th-japon.jpg" alt="Japon"><span>Team Japón 2018</span></a></div>
+					<div><a href="/img/foto/south-africa.jpg" data-lity="cosplay"><img src="/img/th-south-africa.jpg" alt="South Africa"><span>Team Sudáfrica 2018</span></a></div>
+					<div><a href="/img/foto/costa-rica.jpg" data-lity="cosplay"><img src="/img/th-costa-rica.jpg" alt="Costa Rica"><span>Team Costa Rica 2018</span></a></div>
+					<div><a href="/img/foto/mexico.jpg" data-lity="cosplay"><img src="/img/th-mexico.jpg" alt="Mexico"></a><span>Team México 2018</span></div>
+					<div><a href="/img/foto/hong-kong.jpg" data-lity="cosplay"><img src="/img/th-hong-kong.jpg" alt="Hong Kong"><span>Team Hong Kong 2018</span></a></div>
+					<div><a href="/img/foto/australia.jpg" data-lity="cosplay"><img src="/img/th-australia.jpg" alt="Australia"><span>Team Australia 2018</span></a></div>
+					<div><a href="/img/foto/indonesia.jpg" data-lity="cosplay"><img src="/img/th-indonesia.jpg" alt="Indonesia"><span>Team Indonesia 2018</span></a></div>
+					<div><a href="/img/foto/russia.jpg" data-lity="cosplay"><img src="/img/th-russia.jpg" alt="Russia"><span>Team Russia 2018</span></a></div>
+					<div><a href="/img/foto/alemania.jpg" data-lity="cosplay"><img src="/img/th-alemania.jpg" alt="Alemania"><span>Team Alemania 2018</span></a></div>
+					<div><a href="/img/foto/dinamarca.jpg" data-lity="cosplay"><img src="/img/th-dinamarca.jpg" alt="Dinamarca"><span>Team Dinamarca 2018</span></a></div>
+					<div><a href="/img/foto/japon.jpg" data-lity="cosplay"><img src="/img/th-japon.jpg" alt="Japon"><span>Team Japón 2018</span></a></div>
 				</div>
 				<br>
 				<div class="wcsTxt">
@@ -511,60 +511,81 @@
 					<div id="arteWrap">
 						<div class="arte">
 							<div class="marco">
-								<img src="/img/comic.jpg" alt="comic">
+								<img src="/img/jenny-odio-th.jpg" alt="comic">
 							</div>
-							<p>Fulano de tal</p>
+							<p>Jenny Odio</p>
 							<div class="bulb"></div>
-							<div class="light"></div>
+							<a href="/img/jenny-odio.jpg" data-lity="arte" class="light"></a>
 							<div class="socialLink">
-								<a href="#" class="fab fa-facebook-square"></a>
-								<a href="#" class="fab fa-instagram"></a>
-								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-youtube"></a>
+								<a href="https://www.facebook.com/jennyodioilustracion/" target="_blank" class="fab fa-facebook-square"></a>
+								<a href="https://www.instagram.com/jennyodio/" target="_blank" class="fab fa-instagram"></a>
+								<a href="#" target="_blank" class="fab fa-behance"></a>
 							</div>
 						</div>
 						<div class="arte">
 							<div class="marco">
-								<img src="/img/comic.jpg" alt="comic">
+								<img src="/img/minor-maitland-th.jpg" alt="comic">
 							</div>
-							<p>Fulano de tal</p>
+							<p>Minor Maitland</p>
 							<div class="bulb"></div>
-							<div class="light"></div>
+							<a href="/img/minor-maitland.jpg" data-lity="arte" class="light"></a>
 							<div class="socialLink">
-								<a href="#" class="fab fa-facebook-square"></a>
-								<a href="#" class="fab fa-instagram"></a>
-								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-youtube"></a>
-							</div>
-						</div>
-						<div class="arte">
-							<div class="marco">
-								<img src="/img/comic.jpg" alt="comic">
-							</div>
-							<p>Fulano de tal</p>
-							<div class="bulb"></div>
-							<div class="light"></div>
-							<div class="socialLink">
-								<a href="#" class="fab fa-facebook-square"></a>
-								<a href="#" class="fab fa-instagram"></a>
-								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-youtube"></a>
-							</div>
-						</div>
-						<div class="arte">
-							<div class="marco">
-								<img src="/img/comic.jpg" alt="comic">
-							</div>
-							<p>Fulano de tal</p>
-							<div class="bulb"></div>
-							<div class="light"></div>
-							<div class="socialLink">
-								<a href="#" class="fab fa-facebook-square"></a>
-								<a href="#" class="fab fa-instagram"></a>
-								<a href="#" class="fab fa-twitter"></a>
-								<a href="#" class="fab fa-youtube"></a>
+								<a href="https://www.instagram.com/minor_maitland_art/" target="_blank" class="fab fa-instagram"></a>
+								<a href="https://minormaitland.artstation.com/" target="_blank" class="fab fa-artstation"></a>
 							</div>
 						</div>					
+						<div class="arte">
+							<div class="marco">
+								<img src="/img/douglas-campos-th.jpg" alt="comic">
+							</div>
+							<p>Douglas Campos</p>
+							<div class="bulb"></div>
+							<a href="/img/douglas-campos.jpg" data-lity="arte" class="light"></a>
+							<div class="socialLink">
+								<a href="https://www.facebook.com/dougcamposart/" target="_blank" class="fab fa-facebook-square"></a>
+								<a href="https://www.behance.net/dougcampos" target="_blank" class="fab fa-behance"></a>
+								<a href="https://www.artstation.com/dougcampos" target="_blank" class="fab fa-artstation"></a>
+							</div>
+						</div>	
+						<div class="arte">
+							<div class="marco">
+								<img src="/img/steven-salas-th.jpg" alt="comic">
+							</div>
+							<p>Steven Salas</p>
+							<div class="bulb"></div>
+							<a href="/img/steven-salas.jpg" data-lity="arte" class="light"></a>
+							<div class="socialLink">
+								<a href="https://www.instagram.com/salasdibuja/" target="_blank" class="fab fa-instagram"></a>
+								<a href="https://www.behance.net/stevensalas/" target="_blank" class="fab fa-behance"></a>
+							</div>
+						</div>
+						<div class="arte">
+							<div class="marco">
+								<img src="/img/john-timms-th.jpg" alt="comic">
+							</div>
+							<p>John Timms</p>
+							<div class="bulb"></div>
+							<a href="/img/john-timms.jpg" data-lity="arte" class="light"></a>
+							<div class="socialLink">
+								<a href="https://www.facebook.com/john.timms.14" target="_blank" class="fab fa-facebook-square"></a>
+								<a href="https://www.instagram.com/theartofjohntimms/" target="_blank" class="fab fa-instagram"></a>
+								<a href="http://www.johntimmsart.com/" target="_blank" class="fas fa-globe"></a>
+							</div>
+						</div>
+						<div class="arte">
+							<div class="marco">
+								<img src="/img/dan-mora-th.jpg" alt="comic">
+							</div>
+							<p>Dan Mora</p>
+							<div class="bulb"></div>
+							<a href="/img/dan-mora.jpg" data-lity="arte" class="light"></a>
+							<div class="socialLink">
+								<a href="https://www.facebook.com/dan.mora.100" target="_blank" class="fab fa-facebook-square"></a>
+								<a href="https://www.instagram.com/dan_mora_c/" target="_blank" class="fab fa-instagram"></a>
+								<a href="https://www.behance.net/danmora" target="_blank" class="fab fa-behance"></a>
+								<a href="https://www.deviantart.com/dan-mora" target="_blank" class="fab fa-deviantart"></a>
+							</div>
+						</div>									
 					</div>
 				</div>
 			</div>
@@ -608,10 +629,14 @@
 					</div>
 				</div>
 				<h2>Autógrafos con invitados.</h2>
-				<p>Para obtener el autografo de los invitados, usted podrá adquirir un artículo oficial de Con-X: Convención Geek. Por su compra obtiene un autógrafo de cortesía o el combo autógrafo + fotografía con el invitado de su elección.</p>
+				<p>Todos los asistentes podrán adquirir sus autógrafos con los invitados a Con-X: Convención Geek. Tendrán un valor de 7,000 colones solo el autógrafo o 10,000 colones en combo con una fotografía.</p>
 				<p>Para su comodidad, puede adquirir el combo de autógrafo + fotografía a través del siguiente enlace: <a href="#" class="btn-orange">Combo Chumlee</a></p>
+
+
+
 				<p>Por favor tome en cuenta que la Entrada General no incluye regalías ni autógrafos con los artistas invitados, únicamente el Geek Pack XL incluye el combo autógrafo + foto con los invitados.</p>
-				<br><br>
+				
+				
 				<p>(*) Nuestro procesador de tarjetas de crédito y débito recibe el pago en moneda dólares únicamente, pedimos disculpas por los inconvenientes que esto pueda provocar.</p>
 			</div>
 		</div>
